samples/_failures_safe/1761425376_365442_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_00ef1340.c: In function ‘main’:
./samples/SAFE/__tmp_00ef1340.c:143:13: error: expected declaration or statement at end of input
  143 |             rows = cols;
      |             ^~~~
./samples/SAFE/__tmp_00ef1340.c:143:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_00ef1340.c:143:13: error: expected declaration or statement at end of input
